--- a/src/btt/newPassword.form
+++ b/src/btt/newPassword.form
@@ -54,16 +54,17 @@
                           <EmptySpace min="67" pref="67" max="-2" attributes="0"/>
                           <Component id="a1" min="-2" pref="140" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="npass" alignment="1" max="32767" attributes="0"/>
+                      <Component id="nps" alignment="1" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
                           <Component id="a2" min="-2" pref="140" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="cnpass" alignment="1" min="-2" pref="290" max="-2" attributes="0"/>
+                      <Component id="cnps" alignment="1" min="-2" pref="290" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="103" max="-2" attributes="0"/>
               </Group>
+              <Component id="id" alignment="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -75,16 +76,17 @@
                       <Component id="jLabel2" min="-2" pref="10" max="-2" attributes="0"/>
                       <Component id="a1" min="-2" pref="20" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="npass" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="nps" min="-2" pref="30" max="-2" attributes="0"/>
                   <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       <Component id="a2" min="-2" pref="20" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="cnpass" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="cnps" min="-2" pref="30" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                   <Component id="update" min="-2" pref="35" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                  <Component id="id" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -115,9 +117,9 @@
             <Property name="text" type="java.lang.String" value="New password:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JPasswordField" name="npass">
+        <Component class="javax.swing.JPasswordField" name="nps">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="npassActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="npsActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
@@ -128,9 +130,9 @@
             <Property name="text" type="java.lang.String" value="Confirm new password:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JPasswordField" name="cnpass">
+        <Component class="javax.swing.JPasswordField" name="cnps">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cnpassActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cnpsActionPerformed"/>
           </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel2">
@@ -143,10 +145,10 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
-                      <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="118" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -195,6 +197,17 @@
             </Property>
             <Property name="horizontalAlignment" type="int" value="11"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="id">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="jLabel1"/>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
